# spiceai

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  acknowledgements.md  go.mod  go.sum  version.txt
crates/llms/: Cargo.toml
crates/llms/src/anthropic/: chat.rs  mod.rs  types.rs  types_stream.rs
crates/llms/src/chat/: mistral.rs  mod.rs
crates/llms/src/chunking/: mod.rs
crates/llms/src/embeddings/: mod.rs
crates/llms/src/openai/: chat.rs  embed.rs  mod.rs
crates/llms/tests/: integration.rs
crates/llms/tests/llms/: create.rs  mod.rs
crates/runtime/: Cargo.toml
crates/runtime-auth/: Cargo.toml
crates/runtime-auth/src/: error.rs  lib.rs  traits.rs
crates/runtime-auth/src/api_key/: mod.rs
crates/runtime-auth/src/layer/: flight.rs  grpc.rs  http.rs  mod.rs
crates/runtime/benches/: bench.rs
crates/runtime/benches/bench_duckdb/: mod.rs
crates/runtime/benches/bench_object_store/: mod.rs  s3.rs
crates/runtime/benches/bench_odbc_athena/: mod.rs
crates/runtime/benches/bench_odbc_databricks/: mod.rs
crates/runtime/benches/bench_postgres/: mod.rs
crates/runtime/benches/bench_spark/: mod.rs
crates/runtime/benches/bench_spicecloud/: mod.rs
crates/runtime/benches/queries/: README.md
crates/runtime/benches/setup/: mod.rs
crates/runtime/benches/snapshots/: bench__duckdb_tpcds_q1.snap  bench__duckdb_tpcds_q10.snap  bench__duckdb_tpcds_q12.snap  bench__duckdb_tpcds_q13.snap  bench__duckdb_tpcds_q15.snap  bench__duckdb_tpcds_q16.snap  bench__duckdb_tpcds_q17.snap  bench__duckdb_tpcds_q18.snap  bench__duckdb_tpcds_q19.snap  bench__duckdb_tpcds_q2.snap  bench__duckdb_tpcds_q20.snap  bench__duckdb_tpcds_q21.snap  bench__duckdb_tpcds_q22.snap  bench__duckdb_tpcds_q25.snap  bench__duckdb_tpcds_q26.snap  bench__duckdb_tpcds_q27.snap  bench__duckdb_tpcds_q28.snap  bench__duckdb_tpcds_q29.snap  bench__duckdb_tpcds_q3.snap  bench__duckdb_tpcds_q30.snap  bench__duckdb_tpcds_q31.snap  bench__duckdb_tpcds_q32.snap  bench__duckdb_tpcds_q33.snap  bench__duckdb_tpcds_q34.snap  bench__duckdb_tpcds_q35.snap  bench__duckdb_tpcds_q36.snap  bench__duckdb_tpcds_q40.snap  bench__duckdb_tpcds_q42.snap  bench__duckdb_tpcds_q43.snap  bench__duckdb_tpcds_q45.snap  bench__duckdb_tpcds_q46.snap  bench__duckdb_tpcds_q47.snap  bench__duckdb_tpcds_q48.snap  bench__duckdb_tpcds_q49.snap  bench__duckdb_tpcds_q5.snap  bench__duckdb_tpcds_q50.snap  bench__duckdb_tpcds_q51.snap  bench__duckdb_tpcds_q52.snap  bench__duckdb_tpcds_q53.snap  bench__duckdb_tpcds_q55.snap  (+222 more)
crates/runtime/src/: accelerated_table.rs  builder.rs  dataaccelerator.rs  dataconnector.rs  datafusion.rs  datasets_health_monitor.rs  dataupdate.rs  flight.rs  http.rs  internal_table.rs  lib.rs  metrics.rs  object_store_registry.rs  opentelemetry.rs  parameters.rs  secrets.rs  status.rs  timing.rs  topological_ordering.rs
crates/runtime/src/accelerated_table/: federation.rs  metrics.rs  refresh.rs  refresh_task.rs  refresh_task_runner.rs  synchronized_table.rs
crates/runtime/src/auth/: mod.rs
crates/runtime/src/component/: dataset.rs
crates/runtime/src/dataaccelerator/: duckdb.rs  spice_sys.rs  sqlite.rs
crates/runtime/src/dataconnector/: abfs.rs  clickhouse.rs  databricks.rs  debezium.rs  delta_lake.rs  dremio.rs  duckdb.rs  file.rs  flightsql.rs  ftp.rs  graphql.rs  https.rs  localpod.rs  memory.rs  mssql.rs  mysql.rs  odbc.rs  postgres.rs  s3.rs  sftp.rs  sharepoint.rs  sink.rs  snowflake.rs  spark.rs  spiceai.rs  unity_catalog.rs
crates/runtime/src/datafusion/: builder.rs  error.rs  query.rs  schema.rs  udf.rs
crates/runtime/src/embeddings/: connector.rs  cosine_distance.rs  execution_plan.rs  table.rs  task.rs  vector_search.rs
crates/runtime/src/execution_plan/: fallback_on_zero_results.rs  schema_cast.rs
crates/runtime/src/federated_table/: mod.rs
crates/runtime/src/flight/: actions.rs  auth.rs  do_exchange.rs  do_get.rs  do_put.rs  get_flight_info.rs  get_schema.rs  handshake.rs  metrics.rs  middleware.rs  util.rs
crates/runtime/src/http/: auth.rs  metrics.rs  routes.rs
crates/runtime/src/init/: catalog.rs  dataset.rs  embedding.rs  extension.rs  llm.rs  metrics.rs  mod.rs  model.rs  pods_watcher.rs  results_cache.rs  task_history.rs  tool.rs  view.rs
crates/runtime/src/model/: chat.rs  embed.rs  mod.rs  tool_use.rs
crates/runtime/src/request/: baggage.rs  context.rs  mod.rs  user_agent.rs
crates/runtime/src/tools/: catalog.rs  mod.rs  utils.rs
crates/runtime/tests/: integration.rs  integration_models.rs
crates/runtime/tests/abfs/: mod.rs
crates/runtime/tests/acceleration/: checkpoint_duckdb.rs  checkpoint_postgres.rs  checkpoint_sqlite.rs  file_watcher.rs  on_conflict.rs  query_push_down.rs  single_instance_duckdb.rs
crates/runtime/tests/catalog/: mod.rs
crates/runtime/tests/cors/: mod.rs
crates/runtime/tests/delta_lake/: mod.rs
crates/runtime/tests/duckdb/: mod.rs
crates/runtime/tests/endpoint_auth/: flight.rs  http.rs
crates/runtime/tests/federation/: mod.rs  mysql.rs
crates/runtime/tests/github/: mod.rs
crates/runtime/tests/graphql/: mod.rs
crates/runtime/tests/models/: hf.rs  mod.rs  openai.rs
crates/runtime/tests/mysql/: mod.rs
crates/runtime/tests/odbc/: mod.rs
crates/runtime/tests/postgres/: mod.rs
crates/runtime/tests/refresh_retry/: mysql.rs
crates/runtime/tests/refresh_sql/: mod.rs
crates/runtime/tests/rehydration/: mod.rs
crates/runtime/tests/results_cache/: mod.rs
crates/runtime/tests/s3/: mod.rs
crates/runtime/tests/snapshots/: integration__mysql_federation_inner_join_with_acc_inner_join_0.snap  integration__mysql_federation_inner_join_with_acc_inner_join_1.snap  integration__mysql_federation_push_down_select_limit_10.snap  integration__mysql_federation_push_down_select_order_by_limit_10.snap  integration__mysql_integration_test_select.snap  integration__spiceai_integration_test_single_source_federation_push_down_select_avg_gas_used.snap  integration__spiceai_integration_test_single_source_federation_push_down_select_eth_logs.snap  (+9 more)
tools/otelpublisher/: Cargo.toml
tools/otelpublisher/src/: main.rs
(+243 files in other folders)
