[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "llms"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu.workspace = true

async-openai.workspace = true
async-stream.workspace = true
async-trait.workspace = true
futures = { workspace = true }
hf-hub = { version = "0.3.0", features = ["tokio"] }
insta = { workspace = true, features = ["filters"] }
regex = "1.10.4"
reqwest.workspace = true
reqwest-eventsource = "0.6.0"
schemars = "0.8.19"
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokenizers = { version = "0.20.0" }
tokio.workspace = true
tracing.workspace = true
tracing-futures.workspace = true

## For Chunking
pulldown-cmark = "0.12.1"
text-splitter = { version = "0.18.1", features = [
    "markdown",
    "tokenizers",
    "tiktoken-rs",
] }
tiktoken-rs = "0.6.0"

mistralrs = { git = "https://github.com/spiceai/mistral.rs", rev = "c43f27decbeef1267a2685c6f0126766fbc0ee87", optional = true }
mistralrs-core = { git = "https://github.com/spiceai/mistral.rs", rev = "c43f27decbeef1267a2685c6f0126766fbc0ee87", optional = true, package = "mistralrs-core" }
rand = "0.8.5"
tei_backend = { package = "text-embeddings-backend", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "afbb039cc50354e9c591d9126d08c1647429151d", features = [
    "candle",
] }
tei_backend_core = { package = "text-embeddings-backend-core", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "afbb039cc50354e9c591d9126d08c1647429151d" }
tei_candle = { package = "text-embeddings-backend-candle", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "afbb039cc50354e9c591d9126d08c1647429151d" }
tei_core = { package = "text-embeddings-core", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "afbb039cc50354e9c591d9126d08c1647429151d" }

either = "1.13.0"
indexmap = "2.3.0"
tempfile = "3.13.0"

[features]
cuda = [
    "tei_backend/cuda",
    "tei_candle/cuda",
    "mistralrs-core/cuda",
    "mistralrs/cuda",
]
default = ["mistralrs"]
metal = [
    "tei_backend/metal",
    "tei_candle/metal",
    "mistralrs-core/metal",
    "mistralrs/metal",
]
mistralrs = ["dep:mistralrs", "dep:mistralrs-core"]
