[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "llms"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu.workspace = true

async-openai.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes = "1.6.0"
futures = { workspace = true }
hf-hub = { version = "0.3.0", features = ["tokio"] }
insta = { workspace = true, features = ["filters"] }
regex = "1.10.4"
reqwest.workspace = true
reqwest-eventsource = "0.6.0"
schemars = "0.8.19"
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokenizers = { version = "0.20.0" }
tokio.workspace = true
tracing.workspace = true
tracing-futures.workspace = true

## For Chunking
text-splitter = {  git = "https://github.com/Jeadie/text-splitter.git", rev = "b33e4748576b9a81d436d3f28a6706f860fc45ba", features = ["markdown", "tokenizers", "tiktoken-rs"]}

pulldown-cmark = "0.12.1"
tiktoken-rs = "0.6.0"

mistralrs = { git = "https://github.com/spiceai/mistral.rs", rev = "d70715944e30f335eb59e1a712962b86d7a5d026", optional = true }
mistralrs-core = { git = "https://github.com/spiceai/mistral.rs", rev = "d70715944e30f335eb59e1a712962b86d7a5d026", optional = true, package = "mistralrs-core" }
rand = "0.8.5"
tei_backend = { package = "text-embeddings-backend", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "b3925b2f97fcd2bfab9551b432ab659c48e5586b", features = [
    "candle",
] }
tei_backend_core = { package = "text-embeddings-backend-core", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "b3925b2f97fcd2bfab9551b432ab659c48e5586b" }
tei_candle = { package = "text-embeddings-backend-candle", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "b3925b2f97fcd2bfab9551b432ab659c48e5586b" }
tei_core = { package = "text-embeddings-core", git = "https://github.com/spiceai/text-embeddings-inference.git", rev = "b3925b2f97fcd2bfab9551b432ab659c48e5586b" }

either = "1.13.0"
indexmap = "2.3.0"
tempfile = "3.13.0"

[dev-dependencies]
anyhow = "1.0.86"
dotenvy.workspace = true
insta.workspace = true
jsonpath-rust = "0.7.3"
lazy_static.workspace = true
paste = "1.0.15"
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[features]
cuda = [
    "tei_backend/cuda",
    "tei_candle/cuda",
    "mistralrs-core/cuda",
    "mistralrs/cuda",
]
default = ["mistralrs"]
metal = [
    "tei_backend/metal",
    "tei_candle/metal",
    "mistralrs-core/metal",
    "mistralrs/metal",
]
mistralrs = ["dep:mistralrs", "dep:mistralrs-core"]
