[package]
description = "Authentication traits/middleware for the Spice runtime"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "runtime-auth"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
app = { path = "../app" }
axum.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
futures.workspace = true
base64.workspace = true
pin-project.workspace = true
http.workspace = true